--- a/Spotify/Controllers/HomeViewController/HomeViewController.xib
+++ b/Spotify/Controllers/HomeViewController/HomeViewController.xib
@@ -23,11 +23,11 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, Spotify!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTh-Ue-Ni7">
                     <rect key="frame" x="87" y="313.5" width="202" height="41"/>
                     <fontDescription key="fontDescription" type="system" pointSize="34"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="LTh-Ue-Ni7" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="bSd-4h-e3g"/>
                 <constraint firstItem="LTh-Ue-Ni7" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="xLG-Zv-QIK"/>
